intel/bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/log.txt
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:39:18: error: assigning to 'int *' from incompatible type 'void *'
                tool->sample = process_event_sample_stub;
                               ^~~~~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:41:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->mmap = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:43:17: error: assigning to 'int *' from incompatible type 'void *'
                tool->mmap2 = process_event_stub;
                              ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:45:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->comm = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:47:22: error: assigning to 'int *' from incompatible type 'void *'
                tool->namespaces = process_event_stub;
                                   ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:49:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->fork = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:51:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->exit = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:63:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->read = process_event_sample_stub;
                             ^~~~~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:65:20: error: assigning to 'int *' from incompatible type 'void *'
                tool->throttle = process_event_stub;
                                 ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:67:22: error: assigning to 'int *' from incompatible type 'void *'
                tool->unthrottle = process_event_stub;
                                   ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:75:20: error: assigning to 'int *' from incompatible type 'void *'
                tool->build_id = process_event_op2_stub;
                                 ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:83:20: error: assigning to 'int *' from incompatible type 'void *'
                tool->id_index = process_event_op2_stub;
                                 ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:85:25: error: assigning to 'int *' from incompatible type 'void *'
                tool->auxtrace_info = process_event_op2_stub;
                                      ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:89:26: error: assigning to 'int *' from incompatible type 'void *'
                tool->auxtrace_error = process_event_op2_stub;
                                       ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:101:21: error: assigning to 'int *' from incompatible type 'void *'
                tool->time_conv = process_event_op2_stub;
                                  ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:103:19: error: assigning to 'int *' from incompatible type 'void *'
                tool->feature = process_event_op2_stub;
                                ^~~~~~~~~~~~~~~~~~~~~~
17 errors generated.
HLS FPGA Parse FAILED.
